# bucket-scout

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bts.jsonc  conductor.json  package.json
.github/workflows/: release.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: index.css
apps/web/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: credentials.rs  error.rs  lib.rs  provider.rs
apps/web/src-tauri/src/commands/: analytics.rs  buckets.rs  credentials.rs  duplicates.rs  history.rs  mod.rs  objects.rs  preview.rs  sync.rs
apps/web/src-tauri/src/db/: duplicates.rs  migrations.rs  mod.rs  operations.rs  sync.rs
apps/web/src-tauri/src/s3/: client.rs
apps/web/src/components/: update-checker.tsx
apps/web/src/components/accounts/: add-account-dialog.tsx
apps/web/src/components/browser/: analytics-charts.tsx  analytics-tab.tsx  app-sidebar.tsx  bucket-analytics-dialog.tsx  bucket-config-dialog.tsx  command-palette.tsx  create-bucket-dialog.tsx  create-folder-dialog.tsx  delete-confirmation-dialog.tsx  download-toast.tsx  drop-zone.tsx  edit-metadata-dialog.tsx  empty-area-context-menu.tsx  file-context-menu.tsx  file-explorer.tsx  layout.tsx  presigned-url-dialog.tsx  preview-panel.tsx  rename-dialog.tsx  responsive-breadcrumb.tsx  search-filters.tsx  search-input.tsx  tags-editor-dialog.tsx  toolbar.tsx  upload-button.tsx  upload-toast.tsx  version-history-dialog.tsx
apps/web/src/components/duplicates/: duplicate-scanner-dialog.tsx  index.ts
apps/web/src/components/history/: index.ts  operations-history-dialog.tsx
apps/web/src/components/icons/: logo.tsx
apps/web/src/components/support/: feedback-dialog.tsx  index.ts  support-me-dialog.tsx
apps/web/src/components/sync/: folder-sync-dialog.tsx  index.ts
apps/web/src/components/ui/: button.tsx  command.tsx  dialog.tsx  popover.tsx  resizable.tsx  scroll-area.tsx
apps/web/src/hooks/: use-download-manager.ts  use-operation-logger.ts  use-upload-manager.ts
apps/web/src/lib/: download-store.ts  open-url.ts  queries.ts  store.ts  tauri.ts  types.ts  upload-store.ts  utils.ts
apps/web/src/routes/: __root.tsx  index.tsx
