[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"

# AWS S3 SDK
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Secure credential storage (cross-platform with native backends)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
base64 = "0.22"

# Image processing for thumbnails
image = "0.25"

# MIME type detection
mime_guess = "2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"

# File system access
tauri-plugin-fs = "2"

# Auto-updater
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# ZIP file creation
zip = { version = "2", default-features = false, features = ["deflate"] }

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Directory paths (for database location)
dirs = "5"

# Content hashing (for sync and duplicate detection)
sha2 = "0.10"
crc32fast = "1.4"
hex = "0.4"

# File system watching (for sync)
notify = "6.1"
